--- a/blog/2018-02-17-腾讯云开发环境配置.md
+++ b/blog/2018-02-17-腾讯云开发环境配置.md
@@ -1,5 +1,4 @@
 ---
-slug: 腾讯云开发环境配置
 title: 腾讯云开发环境配置
 date: 2018-02-17 15:59:56
 authors: zhenghua
@@ -16,7 +15,7 @@ tags: [腾讯云,开发环境,配置]
  [root@VM_0_14_centos ~]# yum -y update
  [root@VM_0_14_centos ~]# yum -y groupinstall development
 ```
-<!-- more -->
+<!--truncate-->
 ## 2. apache
 
 安装apache，设置apache自启动，并启动apache。
