--- a/blog/2018-02-20-人生七年.md
+++ b/blog/2018-02-20-人生七年.md
@@ -1,5 +1,4 @@
 ---
-slug: 人生七年
 title: 人生七年
 date: 2018-02-20 22:49:15
 authors: zhenghua
@@ -9,7 +8,7 @@ tags: [纪录片,英国]
 ### 来历
 
 纪录片《人生七年》（英文名《7 up》），1964年开始拍摄，采访来自英国不同阶层的14个7岁小孩，都是1957年生的，此后每隔7年重新采访，最近一次是2012年她们56岁。
-<!-- more -->
+<!--truncate-->
 ### 七岁定终生
 
 他们来自不同社会阶层，有上层精英的，从小就已经安排好自己的道路，从富人区中小学直到牛津、剑桥，再入律师、媒体等等。中层的大都自得其乐，相对充满变数，有想法的，其中农民的儿子成了大学教授，不思进取的，其中老师的儿子因为大学没考上牛津，一蹶不振流浪二十几年。底层家庭，一路按部就班经历了辍学、早婚、多子、失业等底层命运。
