--- a/blog/2018-02-21-python-入门.md
+++ b/blog/2018-02-21-python-入门.md
@@ -1,5 +1,4 @@
 ---
-slug: python-入门
 title: python 入门
 date: 2018-02-21 17:01:02
 authors: zhenghua
@@ -15,7 +14,7 @@ tags: [python,入门]
 操作系统：macOS Sierra 版本10.12.6
 
 python：python3.6
-<!-- more -->
+<!--truncate-->
 ##### 安装
 
 从python.org下载python3.6安装文件安装
