--- a/blog/2018-03-06-死记硬背.md
+++ b/blog/2018-03-06-死记硬背.md
@@ -1,5 +1,4 @@
 ---
-slug: 死记硬背
 title: 死记硬背
 date: 2018-03-06 08:47:16
 authors: zhenghua
@@ -13,7 +12,7 @@ tags: [学习,教育]
 
 思考在工作记忆中发生，在你将（周边环境和长期记忆中的）信息用新的方法组合时发生。与看、听、动的能力相比，思考是缓慢的、费力的、不可靠的。
 
-<!-- more -->
+<!--truncate-->
 
 ### 上学
 
