--- a/blog/2018-03-14-远近适度-过犹不及.md
+++ b/blog/2018-03-14-远近适度-过犹不及.md
@@ -1,5 +1,4 @@
 ---
-slug: 远近适度-过犹不及
 title: 远近适度，过犹不及
 date: 2018-03-14 06:54:08
 authors: zhenghua
@@ -8,7 +7,7 @@ tags: [沟通]
 
 ![](/img/s29503968.jpg)
 
-<!-- more -->
+<!--truncate-->
 
 ## 改变观念
 
