--- a/blog/2018-04-18-有效学习.md
+++ b/blog/2018-04-18-有效学习.md
@@ -1,5 +1,4 @@
 ---
-slug: 有效学习
 title: 有效学习
 date: 2018-04-18 09:21:31
 authors: zhenghua
@@ -7,7 +6,7 @@ tags: [学习]
 ---
 
 ![](/img/s29670292.jpg)
-<!-- more -->
+<!--truncate-->
 
 ### 记忆
 
