--- a/blog/2018-05-04-合同入门.md
+++ b/blog/2018-05-04-合同入门.md
@@ -1,12 +1,11 @@
 ---
-slug: 合同入门
 title: 合同入门
 date: 2018-05-04 10:48:25
 authors: zhenghua
 tags: [法律]
 ---
 ![](/img/s4106067.jpg)
-<!-- more -->
+<!--truncate-->
 
 ### 以具体交易需求为目标导向
 
