--- a/blog/2018-05-16-元典使用说明.md
+++ b/blog/2018-05-16-元典使用说明.md
@@ -3,11 +3,12 @@ title: 元典使用说明
 date: 2018-05-16 10:16:16
 authors: zhenghua
 tags: [法律]
+description: 元典使用说明
 ---
 
 ### 定位
 [元典律师工作平台](https://www.legalmind.cn)，立足律师的诉讼、非诉业务，柔和了[工作流](https://zh.wikipedia.org/wiki/%E5%B7%A5%E4%BD%9C%E6%B5%81%E6%8A%80%E6%9C%AF)、知识库、客户管理、大数据，并提供法院接口，目前只有吉林地区法院，以此为律师提供专业服务。
-
+<!--truncate-->
 ### 使用
 推荐使用Chrome浏览器，注册后即可同时使用网页端、微信端，网页端更强大些，微信端更方便些。案件／项目以工作流的方式进行管理，按阶段设置任务、记录，其中阶段是某段时间的名称，任务是律师的工作，记录是相关的材料。阶段、任务、记录可以自定义，也可以使用模版创建。可以首先使用模版创建某个案件／项目的工作流，然后按实际情况进行编辑调整，对其中的阶段、任务、记录进行添加、编辑、删除操作。
 
