--- a/blog/2018-05-03-日复一日-年复一年.md
+++ b/blog/2018-05-03-日复一日-年复一年.md
@@ -1,13 +1,13 @@
 ---
-slug: 日复一日-年复一年
 title: 日复一日，年复一年
 date: 2018-05-03 11:55:07
 authors: zhenghua
 tags: [心理]
+image: /img/niu.png
 ---
 
 ![](/img/niu.png)
-<!-- more -->
+<!--truncate-->
 ### 重复
 日出而作，日入而息，人生在日复一日，年复一年的不断循环中慢慢变老，[所谓“命运”](https://m.xinli001.com/info/100392846)，就是[强迫性重复](https://baike.baidu.com/item/%E5%BC%BA%E8%BF%AB%E9%87%8D%E5%A4%8D%E5%8E%9F%E5%88%99)，不幸就是在重复同样的错误。
 
